# matg-backend

./: Dockerfile  ReadMe.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  init_db.py  main.py
app/models/: card.py  deck.py  deck_card.py
app/routers/: card.py  deck.py
app/schemas/: card.py  deck.py  deck_card.py
app/services/: card.py  deck.py
